force-app/main/default/objects/Order/fields/Accounts_Payable_Contact__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts Payable Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Accounts Payable Contact)</relationshipLabel>
    <relationshipName>Orders5</relationshipName>
    <type>Lookup</type>
</CustomField>