force-app/main/default/objects/Order/fields/ACV_USD__c.field-meta.xml
<CustomField>
    <fullName>ACV_USD__c</fullName>
    <formula>IF(
Opportunity.IsClosed, 
ACV__c /  Opportunity.Closed_Conversion_Rate__c,
ACV__c / CURRENCYRATE(TEXT(CurrencyIsoCode))
)</formula>
    <label>ACV (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>