force-app/main/default/objects/Order/fields/Annualized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annualized_Amount__c</fullName>
    <label>Annualized Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>