force-app/main/default/objects/Order/fields/AOD_Received__c.field-meta.xml
<CustomField>
    <fullName>AOD_Received__c</fullName>
    <description>This field will be populated by automation transmitted from Oracle. Do NOT update this field manually</description>
    <inlineHelpText>This field will be populated by automation transmitted from Oracle. Do NOT update this field manually</inlineHelpText>
    <label>SAD Received</label>
    <type>Date</type>
</CustomField>