force-app/main/default/objects/Order/fields/AOD_Required__c.field-meta.xml
<CustomField>
    <fullName>AOD_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAD Required</label>
    <type>Checkbox</type>
</CustomField>