force-app/main/default/objects/Order/fields/Apply_Contracted_Pricing_From__c.field-meta.xml
<CustomField>
    <fullName>Apply_Contracted_Pricing_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the Account for which Contracted Pricing should occur from</description>
    <inlineHelpText>Indicates the Account for which Contracted Pricing should occur from</inlineHelpText>
    <label>Apply Contracted Pricing From</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Apply Contracted Pricing From)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>