force-app/main/default/objects/Order/fields/ARR_USD__c.field-meta.xml
<CustomField>
    <fullName>ARR_USD__c</fullName>
    <formula>IF(
Opportunity.IsClosed, 
ARR__c /  Opportunity.Closed_Conversion_Rate__c,
ARR__c / CURRENCYRATE(TEXT(CurrencyIsoCode))
)</formula>
    <label>ARR (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>