force-app/main/default/objects/Order/fields/Asset_Only_Deal__c.field-meta.xml
<CustomField>
    <fullName>Asset_Only_Deal__c</fullName>
    <label>Asset Only Deal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>