force-app/main/default/objects/Order/fields/Bill_To_Account_EBS_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_EBS_Number__c</fullName>
    <formula>Bill_To_Address__r.Account__r.Oracle_Number_EBS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Account EBS Number</label>
    <type>Text</type>
</CustomField>