force-app/main/default/objects/Order/fields/Bill_To_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_Name__c</fullName>
    <formula>Bill_To_Address__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Account Name</label>
    <type>Text</type>
</CustomField>