force-app/main/default/objects/Order/fields/Bill_To_EBS_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_EBS_Number__c</fullName>
    <formula>Bill_To_Address__r.Oracle_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To EBS Number</label>
    <type>Text</type>
</CustomField>