force-app/main/default/objects/Order/fields/BillTo_Oracle__c.field-meta.xml
<CustomField>
    <fullName>BillTo_Oracle__c</fullName>
    <label>Legacy BillTo Oracle #</label>
    <length>250</length>
    <type>Text</type>
</CustomField>