force-app/main/default/objects/Order/fields/Booked_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Booked_Territory_Code__c</fullName>
    <label>Booked Territory Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>