force-app/main/default/objects/Order/fields/Bookings_Value_USD__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Value_USD__c</fullName>
    <formula>IF(
Opportunity.IsClosed, 
(ARR__c + NRR__c) /  Opportunity.Closed_Conversion_Rate__c,
(ARR__c + NRR__c) / CURRENCYRATE(TEXT(CurrencyIsoCode))
)</formula>
    <label>Bookings Value (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>