force-app/main/default/objects/Order/fields/Contracted_Attempted__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Attempted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents SOQL Loop when Contracting Job Fails</description>
    <label>Contracted Attempted</label>
    <type>Checkbox</type>
</CustomField>