force-app/main/default/objects/Order/fields/Covered_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Covered_Facilities__c</fullName>
    <label>Covered Schools</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>