force-app/main/default/objects/Order/fields/CSM_Name__c.field-meta.xml
<CustomField>
    <fullName>CSM_Name__c</fullName>
    <description>CSM Name from Account record</description>
    <formula>text(Account.CSM_Name__c)</formula>
    <label>CSM Name</label>
    <type>Text</type>
</CustomField>