force-app/main/default/objects/Order/fields/EBS_Order_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>EBS_Order_Booked_Date__c</fullName>
    <formula>Opportunity.EBS_Order_Booked_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBS Order Booked Date</label>
    <type>Date</type>
</CustomField>