force-app/main/default/objects/Order/fields/EBS_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>EBS_Order_Status__c</fullName>
    <formula>TEXT(Opportunity.EBS_Order_Status__c)</formula>
    <label>EBS Order Status</label>
    <type>Text</type>
</CustomField>