force-app/main/default/objects/Order/fields/HasBeenRead__c.field-meta.xml
<CustomField>
    <fullName>HasBeenRead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required for the integration to Oracle</description>
    <inlineHelpText>Required for the integration to Oracle</inlineHelpText>
    <label>HasBeenRead</label>
    <type>Checkbox</type>
</CustomField>