force-app/main/default/objects/Order/fields/List_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>List_Amount_USD__c</fullName>
    <formula>IF(
Opportunity.IsClosed, 
List_Amount__c /  Opportunity.Closed_Conversion_Rate__c,
List_Amount__c / CURRENCYRATE(TEXT(CurrencyIsoCode))
)</formula>
    <label>List Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>