force-app/main/default/objects/Order/fields/Negative_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Negative_Line_Items__c</fullName>
    <description>Indicates how many negative line items exist on this Order</description>
    <label>Negative Line Items</label>
    <summaryFilterItems>
        <field>OrderItem.Quantity</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>