force-app/main/default/objects/Order/fields/Net_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_USD__c</fullName>
    <formula>IF(
Opportunity.IsClosed, 
Net_Amount__c /  Opportunity.Closed_Conversion_Rate__c,
Net_Amount__c / CURRENCYRATE(TEXT(CurrencyIsoCode))
)</formula>
    <label>Net Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>