force-app/main/default/objects/Order/fields/NRR_USD__c.field-meta.xml
<CustomField>
    <fullName>NRR_USD__c</fullName>
    <formula>IF(
Opportunity.IsClosed, 
NRR__c /  Opportunity.Closed_Conversion_Rate__c,
NRR__c / CURRENCYRATE(TEXT(CurrencyIsoCode))
)</formula>
    <label>NRR (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>