force-app/main/default/objects/Order/fields/of_Sites__c.field-meta.xml
<CustomField>
    <fullName>of_Sites__c</fullName>
    <label># of Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>