force-app/main/default/objects/Order/fields/Opp_18_digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_18_digit_ID__c</fullName>
    <formula>Opportunity.X18_Digit_Opp_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp 18 digit ID</label>
    <type>Text</type>
</CustomField>