force-app/main/default/objects/Order/fields/Oracle_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Account_Number__c</fullName>
    <formula>Account.Oracle_Number_EBS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oracle Account Number</label>
    <type>Text</type>
</CustomField>