force-app/main/default/objects/Order/fields/Oracle_EBS_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_EBS_Account_Number__c</fullName>
    <formula>Account.Site</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oracle EBS Account Number</label>
    <type>Text</type>
</CustomField>