force-app/main/default/objects/Order/fields/Oracle_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Oracle External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>