force-app/main/default/objects/Order/fields/Oracle_Order_Hold__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Order_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oracle Order Hold</label>
    <type>Checkbox</type>
</CustomField>