force-app/main/default/objects/Order/fields/Oracle_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Order_Number__c</fullName>
    <label>Oracle Order Number</label>
    <type>TextArea</type>
</CustomField>