force-app/main/default/objects/Order/fields/Oracle_Order_Validated__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Order_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manually checked to filter booking teams list</description>
    <inlineHelpText>Manually checked to filter booking teams list</inlineHelpText>
    <label>Oracle Order Validated</label>
    <type>Checkbox</type>
</CustomField>