force-app/main/default/objects/Order/fields/Oracle_Price_List__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Price_List__c</fullName>
    <formula>SBQQ__Quote__r.Oracle_Price_List__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oracle Price List</label>
    <type>Text</type>
</CustomField>