force-app/main/default/objects/Order/fields/Order_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_USD__c</fullName>
    <formula>IF(
Opportunity.IsClosed, 
TotalAmount /  Opportunity.Closed_Conversion_Rate__c,
TotalAmount / CURRENCYRATE(TEXT(CurrencyIsoCode))
)</formula>
    <label>Order Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>