force-app/main/default/objects/Order/fields/Order_Bookings_USD__c.field-meta.xml
<CustomField>
    <fullName>Order_Bookings_USD__c</fullName>
    <formula>IF(
Opportunity.IsClosed, 
SBQQ__OrderBookings__c /  Opportunity.Closed_Conversion_Rate__c,
SBQQ__OrderBookings__c / CURRENCYRATE(TEXT(CurrencyIsoCode))
)</formula>
    <label>Order Bookings (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>