force-app/main/default/objects/Order/fields/Order_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Quantity__c</fullName>
    <label>Order Item Quantity</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.SBQQ__SegmentIndex__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Oracle_DM_Item_Num__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Company__c</field>
        <operation>equals</operation>
        <value>FSS</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OrderItem.Quantity</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>