force-app/main/default/objects/Order/fields/Order_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Sub_Type__c</fullName>
    <description>formula pulling from Quote</description>
    <formula>SBQQ__Quote__r.Quote_Sub_Type_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value pulled from the Quote record. Shows the transaction type.</inlineHelpText>
    <label>Order Sub-Type</label>
    <type>Text</type>
</CustomField>