force-app/main/default/objects/Order/fields/Parent_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Name__c</fullName>
    <formula>Account.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Name</label>
    <type>Text</type>
</CustomField>