force-app/main/default/objects/Order/fields/Parent_Oracle_EBS_Number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Oracle_EBS_Number__c</fullName>
    <formula>Account.Parent.Site</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Oracle EBS Number</label>
    <type>Text</type>
</CustomField>