force-app/main/default/objects/Order/fields/Previously_Booked_in_ML__c.field-meta.xml
<CustomField>
    <fullName>Previously_Booked_in_ML__c</fullName>
    <formula>Opportunity.Previously_Booked_in_ML__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previously Booked in ML</label>
    <type>Checkbox</type>
</CustomField>