force-app/main/default/objects/Order/fields/PriceBookName__c.field-meta.xml
<CustomField>
    <fullName>PriceBookName__c</fullName>
    <formula>Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriceBookName</label>
    <type>Text</type>
</CustomField>