force-app/main/default/objects/Order/fields/Renewal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Renewal Contact)</relationshipLabel>
    <relationshipName>Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>