force-app/main/default/objects/Order/fields/Renewal_Path__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Path__c</fullName>
    <formula>SBQQ__Quote__r.Renewal_Path__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Path</label>
    <type>Text</type>
</CustomField>