force-app/main/default/objects/Order/fields/Renewal_Path_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Path_Picklist__c</fullName>
    <description>Indicates the Renewal Path for the Order.</description>
    <inlineHelpText>Indicates the Renewal Path for the Order.</inlineHelpText>
    <label>Renewal Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Renewal_Path</valueSetName>
    </valueSet>
</CustomField>