force-app/main/default/objects/Order/fields/Renewed_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Contract_Id__c</fullName>
    <formula>Opportunity.SBQQ__RenewedContract__c</formula>
    <label>Renewed Contract Id</label>
    <type>Text</type>
</CustomField>