force-app/main/default/objects/Order/fields/SALESREP_EMAIL__c.field-meta.xml
<CustomField>
    <fullName>SALESREP_EMAIL__c</fullName>
    <label>SALESREP_EMAIL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>