force-app/main/default/objects/Order/fields/School_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>School_Enrollment__c</fullName>
    <label>School Enrollment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>