force-app/main/default/objects/Order/fields/Ship_To_Account_EBS_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account_EBS_Number__c</fullName>
    <formula>Ship_To_Address__r.Account__r.Oracle_Number_EBS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Account EBS Number</label>
    <type>Text</type>
</CustomField>