force-app/main/default/objects/Order/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Orders (Ship To Address)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>