force-app/main/default/objects/Order/fields/Ship_To_EBS_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_EBS_Number__c</fullName>
    <formula>Ship_To_Address__r.Oracle_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To EBS Number</label>
    <type>Text</type>
</CustomField>