force-app/main/default/objects/Order/fields/Shipping_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Instructions__c</fullName>
    <description>This is used by Order Entry team to pass the shipping information from CPQ order to Oracle Order</description>
    <label>Order/Shipping Instructions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>