force-app/main/default/objects/Order/fields/ShipTo__c.field-meta.xml
<CustomField>
    <fullName>ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy ShipTo</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (ShipTo)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>