force-app/main/default/objects/Order/fields/ShipTo_Oracle__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Oracle__c</fullName>
    <label>Legacy ShipTo Oracle #</label>
    <length>250</length>
    <type>Text</type>
</CustomField>