force-app/main/default/objects/Order/fields/Signing_Authority_Contact__c.field-meta.xml
<CustomField>
    <fullName>Signing_Authority_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signing Authority Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Signing Authority Contact)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>