force-app/main/default/objects/Order/fields/SoldTo_Oracle__c.field-meta.xml
<CustomField>
    <fullName>SoldTo_Oracle__c</fullName>
    <label>SoldTo Oracle #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>