force-app/main/default/objects/Order/fields/Sum_of_Provisionings__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Provisionings__c</fullName>
    <label>Sum of Provisionings</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>