force-app/main/default/objects/Order/fields/Sum_of_Provisionings_USD__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Provisionings_USD__c</fullName>
    <formula>IF(
Opportunity.IsClosed, 
Sum_of_Provisionings__c /  Opportunity.Closed_Conversion_Rate__c,
Sum_of_Provisionings__c / CURRENCYRATE(TEXT(CurrencyIsoCode))
)</formula>
    <label>Sum of Provisionings (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>