force-app/main/default/objects/Order/fields/Tax_Exempt_Account__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Exempt Account</label>
    <type>Checkbox</type>
</CustomField>