force-app/main/default/objects/Order/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>