force-app/main/default/objects/Order/fields/TCV_USD__c.field-meta.xml
<CustomField>
    <fullName>TCV_USD__c</fullName>
    <formula>IF(
Opportunity.IsClosed, 
TCV__c /  Opportunity.Closed_Conversion_Rate__c,
TCV__c / CURRENCYRATE(TEXT(CurrencyIsoCode))
)</formula>
    <label>TCV (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>