force-app/main/default/objects/Order/fields/Time_since_Creation__c.field-meta.xml
<CustomField>
    <fullName>Time_since_Creation__c</fullName>
    <formula>( NOW() - CreatedDate ) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time since Creation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>