force-app/main/default/objects/Order/validationRules/Cannot_Edit_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Order</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
    
OR(
    ISPICKVAL(Status, &quot;Sync to ERP&quot;),
    ISPICKVAL(Status, &quot;SAD&quot;),
    ISPICKVAL(Status, &quot;Activated&quot;)),

$Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
    <errorMessage>You cannot edit this Order because it has been synced to the ERP</errorMessage>
</ValidationRule>